// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`what-src configuration has stable output 1`] = `
Object {
  "baseDirOverride": null,
  "blacklistedTags": Array [
    "Helmet",
    "head",
    "meta",
    "script",
  ],
  "cacheFileName": "whatSrcRuntime.js",
  "cacheLocOverride": null,
  "createCacheDir": true,
  "createCacheFile": true,
  "dataTag": "data-what-src",
  "enableXkcdMode": false,
  "globalCacheKey": "__what-src-global-callback-key",
  "preventDefault": true,
  "productionMode": false,
  "serverUrl": "http://localhost:8018/__what_src",
  "stopPropagation": true,
  "useRemote": false,
}
`;

exports[`what-src configuration is configurable 1`] = `
Object {
  "baseDirOverride": null,
  "blacklistedTags": Array [
    "Helmet",
    "head",
    "meta",
    "script",
  ],
  "cacheFileName": "whatSrcRuntime.js",
  "cacheLocOverride": null,
  "createCacheDir": true,
  "createCacheFile": true,
  "dataTag": "data-what-src",
  "enableXkcdMode": false,
  "globalCacheKey": "__what-src-global-callback-key",
  "preventDefault": true,
  "productionMode": true,
  "serverUrl": "new_server_url",
  "stopPropagation": true,
  "useRemote": false,
}
`;
